<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WillyWonka">

    <TextView
        android:id="@+id/tvWillyWonkaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="23dp"
        android:text="@string/willy_wonka"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvJerseyJack"
        app:layout_constraintStart_toStartOf="@+id/tvJerseyJack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJerseyJack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/jersey_jack_pinball"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ivWillyWonka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWillyWonkaName" />

    <ImageView
        android:id="@+id/ivWillyWonka"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/wonkaimage"
        app:layout_constraintBottom_toTopOf="@+id/tvWonkaDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJerseyJack"
        app:srcCompat="@drawable/wonka" />

    <TextView
        android:id="@+id/tvWonkaDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:text="@string/april_2019"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWillyWonka" />


</androidx.constraintlayout.widget.ConstraintLayout>